# ProjectCodeMap

./: .gitignore  .pcmignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  debug_parser.py  debug_php.py  debug_query.py  project-code-map.spec  project_code_map_output.txt  pyproject.toml  run.bat  setup.bat
.github/workflows/: ci.yml
docs/: 概念的要件定義書.md
src/: __init__.py  __main__.py  cli.py  config.py  main.py  models.py  scanner.py
src/formatters/: __init__.py  aider.py  json.py  markdown.py  structured.py  text.py  xml.py
src/parser/: __init__.py  base.py  php.py  python.py
src/project_code_map/: __init__.py  __main__.py  cli.py  config.py  models.py  scanner.py
src/project_code_map/formatters/: __init__.py  aider.py  json.py  markdown.py  structured.py  text.py  xml.py
src/project_code_map/parser/: __init__.py  base.py  php.py  python.py
templates/: changelog.j2
tests/: test_project_code_map.py
